--- a/cupcakes.html
+++ b/cupcakes.html
@@ -29,7 +29,7 @@
         <h1>For The Love Of Cupcakes</h1>
         <div class="cupcakes">
             <div class="cupcake">
-            <img src="http://www.cupcakeipsum.com/images/pink_pie.png" alt="">
+            <img src="pink_pie.png" alt="">
             Liquorice gingerbread chupa chups liquorice dragée cheesecake cupcake cupcake. Brownie dessert bear claw cupcake chocolate bar cake marzipan gingerbread pastry. Liquorice croissant jelly beans tootsie roll donut pastry lollipop danish. Dessert powder chocolate cake chocolate bar pudding pie shortbread lollipop biscuit. Jujubes brownie sweet soufflé gummi bears. Tootsie roll cake ice cream wafer muffin cheesecake. 
         </div>
             <div class="cupcake">
