--- a/cupcakes.html
+++ b/cupcakes.html
@@ -33,15 +33,15 @@
             Liquorice gingerbread chupa chups liquorice dragée cheesecake cupcake cupcake. Brownie dessert bear claw cupcake chocolate bar cake marzipan gingerbread pastry. Liquorice croissant jelly beans tootsie roll donut pastry lollipop danish. Dessert powder chocolate cake chocolate bar pudding pie shortbread lollipop biscuit. Jujubes brownie sweet soufflé gummi bears. Tootsie roll cake ice cream wafer muffin cheesecake. 
         </div>
             <div class="cupcake">
-            <img src="http://www.cupcakeipsum.com/images/pink_muffin.png" alt="">
+            <img src="pink_muffin.png" alt="">
             Wafer halvah marshmallow chupa chups apple pie candy. Cheesecake soufflé powder gummies pudding cookie wafer marshmallow jelly-o. Jelly beans fruitcake croissant cheesecake wafer. Caramels pudding sweet roll chocolate cake cake. Danish pie macaroon powder halvah oat cake. Cake fruitcake lemon drops gummi bears dessert jujubes. Soufflé sweet pastry cotton candy gingerbread bear claw. Marshmallow sweet cupcake soufflé pastry tart powder marzipan marshmallow. Caramels macaroon oat cake carrot cake brownie sesame snaps.   
         </div>
             <div class="cupcake">
-            <img src="http://www.cupcakeipsum.com/images/green_muffin.png" alt="">
+            <img src="green_muffin.png" alt="">
             Jelly sesame snaps lollipop jelly-o pastry muffin sweet roll cotton candy. Jelly sugar plum cotton candy chocolate bar lollipop wafer. Brownie cookie toffee dessert dessert chocolate cake chocolate bar donut. Candy jelly-o gummi bears donut sweet roll pastry cake danish chocolate bar. Marshmallow lollipop halvah dessert halvah sesame snaps dragée. Croissant gummies chocolate cake shortbread tart dragée oat cake liquorice.
         </div>
             <div class="cupcake">
-            <img src="http://www.cupcakeipsum.com/images/light_brown_muffin.png" alt="">
+            <img src="light_brown_muffin.png" alt="">
             Chocolate cake pastry jelly-o powder candy canes liquorice dessert. Pastry macaroon bonbon toffee icing toffee caramels. Tart gummi bears pastry bonbon jelly-o fruitcake. Pastry pudding powder gingerbread bear claw. Fruitcake bonbon candy canes chupa chups pastry oat cake dessert croissant gummies. Muffin biscuit cotton candy chocolate bar gummi bears biscuit cheesecake.
         </div>
     </div>
