--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Landing Page</h1>
+    <h1>The Landing Page</h1>
     <div>
     <a href="responsive.html">Responsive Pages</a>
     </div>
